@@ -176,13 +176,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                   <compilerArgs>
-                        <arg>--enable-preview</arg>
-                        <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.base/jdk.internal.access.foreign=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                    <source>26</source>
-                    <target>26</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.46</version>
+                        </path>
+                        <path>
+                            <groupId>com.alibaba.fastffi</groupId>
+                            <artifactId>annotation-processor</artifactId>
+                            <version>${fastffi.revision}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
